[package]
name = "lunu"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["microservices/*"]

[features]
auth = []
account = []
db = []
storage = []

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.2.1", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
prost = "0.11.8"
time = "0.3.20"
tonic = "0.8.3"
uuid = { version = "1.3.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8.4"
