[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunu = { path = "../../", features = ["db", "account"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.1"
time = "0.3.20"
uuid = "1.3.0"
bigdecimal = "0.3.0"
