[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.0", features = ["std"] }
lunu = { path = "../../", features = ["db", "auth"] }
rand = "0.8.5"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
uuid = "1.3.0"
