[package]
name = "email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.4", features = [
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
lunu = { path = "../../", features = ["email"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.1"
