[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunu = { path = "../../", features = ["storage"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic = "0.9.1"
